--- a/Example/Podfile
+++ b/Example/Podfile
@@ -2,8 +2,8 @@ use_frameworks!
 
 platform :ios, '8.0'
 
-target 'libLWPurchase_Example' do
-  pod 'libLWPurchase', :path => '../'
+target 'LWPurchase_Example' do
+  pod 'LWPurchase', :path => '../'
 
   pod 'SDWebImage', '~> 5.0.1'
 
@@ -11,7 +11,7 @@ target 'libLWPurchase_Example' do
   pod 'MBProgressHUD', '~> 1.1.0'
   pod 'Masonry'
 
-  # target 'libLWPurchase_Tests' do
+  # target 'LWPurchase_Tests' do
   #   inherit! :search_paths
   #
   # end
