修改.gitignore 2020-06-10-044742bbfbh

--- a/LWPurchase/Assets/IAPConfig.json
+++ b/LWPurchase/Assets/IAPConfig.json
@@ -46,7 +46,7 @@
   ],
   "purchaseConfig":{
     "needPurchase":true,
-    "needKeyboardPurchase":false,
+    "needKeyboardPurchase":true,
     "tryRatingTriggerCount":10,
     "ratedTriggerCount":100
   }
