add hidePurchaseEntry field

--- a/LWPurchase/Assets/IAPConfig.json
+++ b/LWPurchase/Assets/IAPConfig.json
@@ -17,6 +17,7 @@
   ],
   "purchaseConfig":{
     "needPurchase":true,
+    "hidePurchaseEntry": false,
     "needKeyboardPurchase":true,
     "tryRatingTriggerCount":30,
     "ratedTriggerCount":100
